--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -916,5 +916,13 @@
     <!-- Lockscreen clock and date font size -->
     <string name="lockscreen_clock_font_size_title">Lock clock font size</string>
     <string name="lockscreen_date_font_size_title">Lock date font size</string>
+    
+    <!-- Screenshot crop and share -->
+    <string name="screenshot_cat_title">Screenshot Options</string>
+    <string name="screenshot_crop_and_share_title">Crop &amp; share</string>
+    <string name="screenshot_crop_and_share_summary">Show an editor window after taking a screenshot in order to do some operations like cropping, saving or sharing</string>
+    <string name="screenshot_crop_behavior_title">Crop mode</string>
+    <string name="screenshot_crop_behavior_summary">Always use the cropped image inside the cropping area, even if the apply button hasn\'t been pressed</string>
+
 
 </resources>
