Configurable Keyguard alpha and Keyguard Bouncer alpha [2/2]
Change-Id: Ia4f42cfb2101370bceab20ede55c8e3d05a9335f

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -365,6 +365,10 @@
     <string name="lockscreen_see_through_summary">Blurs and displays the content behind your lock screen.</string>
     <string name="lockscreen_blur_radius">Blur effect intensity</string>
 
+    <!-- Lockscreen alpha -->
+    <string name="lockscreen_alpha">Alpha setting</string>
+    <string name="lockscreen_security_alpha">Bouncer alpha setting</string>
+
     <!-- Notificatio drawer weather -->
     <string name="notif_drawer_weather_title">Weather</string>
     <string name="notif_drawer_weather_summary">Toggle notification drawer weather info</string>
