AicpExtras : Improve Readability
Add preference categories for related items so that it is easier to look
for the exact tweak we need.

Change-Id: Iee4687d38e6822e48ca783660e3dad24d90b6c4a
Signed-off-by: pranav <cherukupallip@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -854,7 +854,6 @@
     <string name="gesture_anywhere_floating_summary">Launch Gesture Anywhere shortcuts in float mode</string>
 
     <!-- Tiles animation style  -->
-    <string name="quicksettings_tiles_category">Tile animation options</string>
     <string name="qs_tile_animation_style_title">Tiles animation style</string>
     <string name="qs_tile_animation_duration_title">Tiles animation duration</string>
     <string name="qs_tile_animation_interpolator_title">Tiles animation interpolator</string>
@@ -920,5 +919,19 @@
     <!-- Lockscreen clock and date font size -->
     <string name="lockscreen_clock_font_size_title">Lock clock font size</string>
     <string name="lockscreen_date_font_size_title">Lock date font size</string>
+
+    <!--Preference Categories-->
+    <string name ="anim">Animation Tweaks</string>
+    <string name ="indicators">Status Bar Indicators</string>
+    <string name="quicksettings_tiles_category">QuickSettings Panel Configurations</string>
+    <string name ="header_tweaks">Header Tweaks</string>
+    <string name ="Misc">Miscellaneous</string>
+    <string name ="cab">Clear All Button Tweaks</string>
+    <string name ="visuals">Recents Extra Visuals</string>
+    <string name = "ls_blur">LockScreen Blur</string>
+    <string name = "lclock_tweaks">LockClock Font Tweaks</string>
+    <string name = "qs">Quick Settings Tweaks</string>
+    <string name = "vol_diag">Volume Dialog Tweaks</string>
+    <string name = "power">Power Menu Tweaks</string>
 
 </resources>
