AE: Updated Chinese Translations
Change-Id: Ib1466105c868ba33f3fc356d498722a7d824f2ac
Source: https://plus.google.com/118256215214819080921/posts/7Q8yGiNw8Hi

--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -40,7 +40,7 @@
     <string name="logo">标志</string>
     <string name="display_animations_title">显示和动画</string>
     <string name="multishit_title">个性设置</string>
-    <string name="transparency_porn_title">界面透明度设置</string>
+    <string name="transparency_porn_title">界面颜色设置</string>
     <string name="notificaitons_title">通知抽屉</string>
     <string name="statubar_title">状态栏</string>
     <string name="lockscreen_title">锁屏</string>
@@ -134,8 +134,6 @@
     <string name="su_indicator_summary_off">不显示ROOT图标</string>
     <string name="status_bar_custom_header_title">顶部时间背景</string>
     <string name="status_bar_custom_header_summary">允许在通知面板顶部显示图片</string>
-    <string name="status_bar_custom_header_default_title">使用高清图片</string>
-    <string name="status_bar_custom_header_default_summary">使用高清图像代替默认图像。</string>
     <string name="carrier_options">运营商名称</string>
     <string name="custom_carrier_label_title">自定义运营商名称</string>
     <string name="custom_carrier_label_explain">请输入一个新的名称，不输入将恢复为默认。</string>
@@ -153,11 +151,15 @@
     <string name="battery_bar">电量栏位置</string>
     <string name="battery_bar_no_navbar">电量栏位置</string>
     <string name="battery_bar_color">电量栏颜色</string>
+    <string name="battery_bar_charging_color">充电时时电量栏颜色</string>
+    <string name="battery_bar_battery_low_color">低电量时电量栏颜色</string>
     <string name="battery_bar_cat">电量栏样式</string>
     <string name="battery_bar_style_title">对齐电量栏</string>
     <string name="battery_bar_thickness_title">电量栏厚度</string>
     <string name="battery_bar_animate_title">充电动画</string>
-    <string name="battery_bar_animate_summary">充电动画可能会造成糟糕的体验！慎重选择！</string>
+    <string name="battery_bar_style_regular">正常(左侧)</string>
+    <string name="battery_bar_style_center_mirrored">居中</string>
+    <string name="battery_bar_style_reversed">反向(右侧)</string>
     <string name="pref_scrollingcache_title">滚动缓存</string>
     <string name="pref_scrollingcache_summary">滚动缓存可以提高内存的滚动性能</string>
     <string name="pref_scrollingcache_force_enable">强制开启</string>
@@ -260,12 +262,15 @@
     <string name="weather_colorize_all_icons_title">为所有图标着色</string>
     <string name="weather_colorize_all_icons_summary">单色图标可以不打开此项</string>
     <string name="weather_hide_panel_title">隐藏天气面板</string>
-    <string name="weather_hide_panel_never_title">总是</string>
-    <string name="weather_hide_panel_auto_summary">当看到通知将达到锁定屏幕上允许的最大的通知，天气面板将被隐藏</string>
-    <string name="weather_hide_panel_custom_summary">天气面板将被隐藏，当看到通知将达到通知所选择的数量（％S）</string>
-    <string name="weather_hide_panel_never_summary">天气面板不会隐藏</string>
-    <string name="weather_number_of_notifications_title">通知数</string>
-    <string name="weather_number_of_notifications_dlg_title">选择通知的数量来隐藏天气面板</string>
+    <string name="weather_hide_panel_dlg_title">选择什么时候隐藏天气面板</string>
+    <string name="weather_hide_panel_auto_title">自动</string>
+    <string name="weather_hide_panel_custom_title">自定义</string>
+    <string name="weather_hide_panel_never_title">从来不</string>
+    <string name="weather_hide_panel_auto_summary">当看到通知将达到锁定屏幕上允许的最大的通知时,天气面板将被隐藏.</string>
+    <string name="weather_hide_panel_custom_summary">当看到通知将达到通知所选择的数量,天气面板将被隐藏.(%s)</string>
+    <string name="weather_hide_panel_never_summary">"天气面板不会隐藏"</string>
+    <string name="weather_number_of_notifications_title">通知的数量</string>
+    <string name="weather_number_of_notifications_dlg_title">选择隐藏天气面板的通知数量</string>
     <string name="weather_number_of_notifications_always_title">总是</string>
     <string name="weather_number_of_notifications_two_title">2</string>
     <string name="weather_number_of_notifications_three_title">3</string>
@@ -279,6 +284,7 @@
     <string name="reset_lockscreen_weather">确定</string>
     <string name="reset_values_message">重置设置？</string>
     <string name="weather_reset_title">重置天气设置</string>
+    <string name="weather_settings">天气设置</string>
     <string name="lock_clock_font_title">锁屏时钟的字体</string>
     <string name="lock_clock_font_summary">更改时钟小部件的字体</string>
     <string name="lock_clock_font_dialog_title">锁屏时钟的字体选择</string>
@@ -367,8 +373,6 @@
     <string name="omniswitch_start_settings_summary">打开滑动任务管理器设置</string>
     <string name="omniswitch_first_time_title">信息</string>
     <string name="omniswitch_first_time_message">请确保您已启用滑动任务管理器。你可以通过下面的\"设置\"启用</string>
-    <string name="double_tap_sleep_nav_bar_title">双击导航栏睡眠</string>
-    <string name="double_tap_sleep_nav_bar_summary">双击导航栏使设备睡眠</string>
     <string name="double_tap_sleep_anywhere_title">锁屏双击睡眠</string>
     <string name="double_tap_sleep_anywhere_summary">锁屏时双击屏幕使设备睡眠</string>
     <string name="pa_piecontrol_settings_summary">自定义Pie触发、大小和颜色</string>
@@ -456,6 +460,7 @@
     <string name="three_finger_gesture">三指手势截图</string>
     <string name="three_finger_gesture_summary">同时使用三根手指滑动屏幕以截图</string>
     <string name="cannot_get_su">不能获取ROOT权限，正在退出。</string>
+    <string name="cannot_get_su_start">无法获得超级用户访问。</string>
     <string name="logcat_title">日志调试</string>
     <string name="kmesg_title">Kmesg 命令</string>
     <string name="dmesg_title">Dmesg 命令</string>
@@ -529,7 +534,7 @@
     <string name="listview_off">关闭</string>
     <string name="listview_wave_left">波形（左侧）</string>
     <string name="listview_wave_right">波形（右侧）</string>
-    <string name="listview_alpha">Alpha</string>
+    <string name="listview_alpha">阿尔法</string>
     <string name="listview_scale">比例</string>
     <string name="listview_stack_top">堆栈（顶部）</string>
     <string name="listview_stack_bottom">堆栈（底部）</string>
@@ -658,4 +663,66 @@
     <string name="status_bar_custom_header_shadow_title">顶部图像阴影</string>
     <string name="status_bar_custom_header_shadow_summary">在清晰的图像上有更好的可见性</string>
     <string name="unit_percent">%</string>
+    <string name="adaway_settings_title">AdAway(广告屏蔽器)</string>
+    <string name="hide_apps_from_recents_title">隐藏应用</string>
+    <string name="hide_apps_from_recents_summary">选择应用程序从最近的任务面板隐藏</string>
+    <string name="lock_screen_show_current">充电电流</string>
+    <string name="lock_screen_show_current_summary">锁屏上显示充电电流剩余时间</string>
+    <string name="shortcut_action_floating_windows">浮动窗口</string>
+    <string name="floating_master_switch">总开关</string>
+    <string name="floating_additional_options">附加的浮动选项</string>
+    <string name="floating_windows">浮动窗口</string>
+    <string name="floating_windows_switch">是否允许全局使用悬浮模式, 下面的选项将会工作,废话!!!</string>
+    <string name="slim_action_floats">Slim &amp; Pie动作</string>
+    <string name="slim_action_floats_summary">在浮动窗口模式开始 Slim &amp; Pie活动</string>
+    <string name="gesture_anywhere_floating">随时随地使用手势</string>
+    <string name="gesture_anywhere_floating_summary">在任何地方快捷使用手势</string>
+    <string name="quicksettings_tiles_category">磁块动画选项</string>
+    <string name="qs_tile_animation_style_title">磁块动画风格</string>
+    <string name="qs_tile_animation_duration_title">磁块动画持续时间</string>
+    <string name="qs_tile_animation_interpolator_title">磁块动画插入器</string>
+    <string name="qs_tile_animation_style_off">无动画</string>
+    <string name="qs_tile_animation_style_flip">空翻</string>
+    <string name="qs_tile_animation_style_rotate">旋转</string>
+    <string name="qs_tile_animation_duration_low">低</string>
+    <string name="qs_tile_animation_duration_default">默认</string>
+    <string name="qs_tile_animation_duration_fast">快速</string>
+    <string name="qs_tile_animation_duration_superfast">超快速</string>
+    <string name="qs_tile_animation_interpolator_linearInterpolator">线性</string>
+    <string name="qs_tile_animation_interpolator_accelerateInterpolator">加速</string>
+    <string name="qs_tile_animation_interpolator_decelerateInterpolator">减速</string>
+    <string name="qs_tile_animation_interpolator_accelerateDecelerateInterpolator">加速减速</string>
+    <string name="qs_tile_animation_interpolator_bounceInterpolator">反弹</string>
+    <string name="qs_tile_animation_interpolator_overshootInterpolator">过冲</string>
+    <string name="qs_tile_animation_interpolator_anticipateInterpolator">提前</string>
+    <string name="qs_tile_animation_interpolator_anticipateOvershootInterpolator">预测过度</string>
+    <string name="qs_set_animation_style">%1$s</string>
+    <string name="qs_set_animation_duration">%1$s</string>
+    <string name="qs_set_animation_interpolator">%1$s</string>
+    <string name="app_exit_toast">按返回退出</string>
+    <string name="volume_dialog_stroke_title">音量栏边缘设置</string>
+    <string name="volume_dialog_stroke_disabled">关闭</string>
+    <string name="volume_dialog_stroke_accent">重点颜色</string>
+    <string name="volume_dialog_stroke_custom">自定义颜色</string>
+    <string name="volume_dialog_stroke_color_title">音量栏边缘颜色</string>
+    <string name="volume_dialog_stroke_thickness_title">音量栏边缘厚度</string>
+    <string name="volume_dialog_corner_radius_title">音量栏边缘圆角限制</string>
+    <string name="qs_stroke_title">开关栏边缘设置</string>
+    <string name="qs_stroke_disabled">关闭</string>
+    <string name="qs_stroke_accent">重点颜色</string>
+    <string name="qs_stroke_custom">自定义颜色</string>
+    <string name="qs_stroke_color_title">开关栏边缘颜色</string>
+    <string name="qs_stroke_thickness_title">开关栏边缘厚度</string>
+    <string name="qs_corner_radius_title">开关栏边缘圆角限制</string>
+    <string name="media_scanner_on_boot_title">媒体扫描态度</string>
+    <string name="media_scanner_on_boot_enabled">扫描媒体</string>
+    <string name="media_scanner_on_boot_ask">要求扫描(通知)</string>
+    <string name="media_scanner_on_boot_disabled">不要扫描媒体</string>
+    <string name="qs_panel_logo_category">开关栏标志</string>
+    <string name="qs_panel_logo_title">开关栏AICP标志</string>
+    <string name="qs_panel_logo_disabled">关闭</string>
+    <string name="qs_panel_logo_accent">重点颜色</string>
+    <string name="qs_panel_logo_custom">自定义颜色</string>
+    <string name="qs_panel_logo_color_title">开关栏AICP标志颜色</string>
+    <string name="qs_panel_logo_alpha_title">开关栏AICP标志透明度</string>
 </resources>
