Fingerprint authentication vibration [2/2]
Change-Id: I6ebdca09b45549d44819a0742c84404db76f1d23

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -938,4 +938,8 @@
     <string name = "vol_diag">Volume Dialog Tweaks</string>
     <string name = "power">Power Menu Tweaks</string>
 
+    <!-- Fingerprint authentication vibration -->
+    <string name="fprint_sucess_vib_title">Fingerprint authentication vibration</string>
+    <string name="fprint_sucess_vib_summary">Vibrate on successful fingerprint authentication</string>
+
 </resources>
